2010-09-24 Lorenzo Natale <>
	src/core/iCubInterface/RobotInterfaceRemap.cpp:
	config file now accepts no parts


2010-09-24 Lorenzo Natale <>
		./main/src/core/iCubInterface:
		./main/src/libraries/skinprototype:
		modified to handle rpc for IAnalog interface.

2010-09-23 Lorenzo Natale <lorenzo.natale@iit.it>
		./main/src/libraries/icubmod/CMakeLists.txt:
		inclusion of YarpPlugin.cmake, does not work with installed yarp
	
2010-09-15 Lorenzo Natale <lorenzo.natale@iit.it>
        * general cleanup, moved old build (mostly everything in src to 
	backup/oldBuild, including some cmake files that were in the 
	root.
	
2010-08-19 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* iCub/main/src/libraries/icubmod/dragonfly2/*
	* iCub/main/src/tools/frameGrabberGui2/include/FrameGrabberGUIControl2.h

	Added image offset control to dragonfly2 library.

2010-06-10 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* iCub/main/src/libraries/iCubVis added (vision library)
	* iCub/main/src/modules/salience added (links iCubVis)

2010-02-19 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* iCub/src/modules/logpolarGrabber/ServerLogpolarFrameGrabber.cpp
	
	--framerate is now real framerate (Hz) and not period (ms).

2010-02-18 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* iCub/src/gui/frameGrabberGui2/FrameGrabberGUIControl.h
	* iCub/src/gui/frameGrabberGui2/CMakeLists.txt

	Added:
	* iCub/src/gui/frameGrabberGui2/Sliders.h
	* iCub/src/gui/frameGrabberGui2/Sliders.cpp

	Improved form refresh.

2010-02-18 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/modules/dragonfly2/common/DragonflyDeviceDriver2.h
	* src/modules/dragonfly2/common/DragonflyDeviceDriver2.cpp
	* src/modules/dragonfly2/linux/FirewireCameraDC1394-2_2.h
	* src/modules/dragonfly2/linux/FirewireCameraDC1394-2_2.cpp
	* src/modules/dragonfly2/winnt/FirewireCameraDC1394-2_2.h
	* src/modules/dragonfly2/winnt/FirewireCameraDC1394-2_2.cpp

	Improved framerate management.